update registration and login; add BusinessException; add primefaces captcha; entity string clean; update eclipse settings; other stuff...